Processing all css files in src folder added

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,19 @@ h1 {
     border-radius: 6px;
     margin: 0 auto;
 }
+
+h3 {
+    color: red;
+}
+
+h4 {
+    color: red;
+}
+
+h5 {
+    color: red;
+}
+
+h6 {
+    color: red;
+}
